2009-03-03  Badlop  <badlop@process-one.net>

	* src/mod_privacy.erl: Privacy List: deny presence-out all + send
	presence to: presence is sent (EJAB-255)
	* src/ejabberd_c2s.erl: Likewise

	* src/mod_privacy.erl: Only run roster_get_jid_info if privacy
	list has subscription or group (thanks to George Hazan)(EJAB-851).
	Sort items in privacy list by order before storing (EJAB-848)
	* src/mod_privacy.hrl: Likewise
	* src/mod_privacy_odbc.erl: Likewise

	* src/mod_muc/mod_muc_room.erl: Owner of a password protected room
	must provide the password, like other participants (EJAB-867)

	* src/mod_muc/mod_muc_log.erl: Prevent XSS in MUC logs by
	linkifying only a few known protocols (EJAB-850)

	* src/mod_muc/mod_muc.erl: Export function to create MUC
	room (thanks to Eric Cestari) (EJAB-729)

	* src/mod_roster.erl: When account is deleted, cancel presence
	subscription for all roster items (EJAB-790)
	* src/mod_roster_odbc.erl: Likewise

	* src/mod_shared_roster.erl: Fix bug: a pending subscription
	request, and later the requester added to the roster due to a
	shared roster group, that request could neither be accepted or
	rejected (thanks to Brian Cully)(EJAB-869)

	* src/web/ejabberd_http_poll.erl: Allow configuration of session
	timeout, using new global option http_poll_timeout (EJAB-135)
	* doc/guide.tex: Document new option
	* doc/guide.html: Likewise

	* src/ejabberd_system_monitor.erl: Allow parametrizable watchdog
	threshold: option watchdog_large_heap or chatting with the
	watchdog bot (EJAB-545)
	* src/ejabberd_config.erl: Likewise
	* doc/guide.tex: Likewise
	* doc/guide.html: Likewise

	* src/web/ejabberd_web_admin.erl: Show big integers with comma
	separators for easy reading

	* src/web/ejabberd_web_admin.erl: Calls to the hook
	webadmin_menu_node provide the node as first argument, and calls
	to webadmin_menu_hostnode provide both the host and the node. Fix
	call to make_menu_items, because webadmin_menu_node was called in